--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.17",
     "@auth0/angular-jwt": "^5.2.0",
+    "bootstrap": "^5.3.6",
     "express": "^4.18.2",
     "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0",
