--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@angular/service-worker": "^17.3.0",
     "@angular/ssr": "^17.3.17",
     "@auth0/angular-jwt": "^5.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.6",
     "express": "^4.18.2",
     "ngx-spinner": "^17.0.0",
